crates/ruff_python_parser/tests/snapshots/invalid_syntax@for_stmt_invalid_target_in_keyword.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/for_stmt_invalid_target_in_keyword.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..170,
        body: [
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    is_async: false,
                    target: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 4..13,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 4..5,
                                    id: Name("d"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 5..13,
                                node_index: NodeIndex(None),
                                args: [
                                    Compare(
                                        ExprCompare {
                                            node_index: NodeIndex(None),
                                            range: 6..12,
                                            left: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 6..7,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ops: [
                                                In,
                                            ],
                                            comparators: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 11..12,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 17..23,
                            id: Name("target"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 25..28,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 29..56,
                    is_async: false,
                    target: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 33..43,
                            func: Compare(
                                ExprCompare {
                                    node_index: NodeIndex(None),
                                    range: 34..40,
                                    left: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 34..35,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ops: [
                                        In,
                                    ],
                                    comparators: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 39..40,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            arguments: Arguments {
                                range: 41..43,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 47..51,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 53..56,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 53..56,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 57..82,
                    is_async: false,
                    target: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 62..68,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 62..63,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                In,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 67..68,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 73..77,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 79..82,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 79..82,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 83..111,
                    is_async: false,
                    target: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 87..98,
                            elts: [
                                Compare(
                                    ExprCompare {
                                        node_index: NodeIndex(None),
                                        range: 88..94,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 88..89,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ops: [
                                            In,
                                        ],
                                        comparators: [
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 93..94,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 96..97,
                                        id: Name("z"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: true,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 102..106,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 108..111,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 108..111,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 112..140,
                    is_async: false,
                    target: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 116..127,
                            elts: [
                                Compare(
                                    ExprCompare {
                                        node_index: NodeIndex(None),
                                        range: 117..123,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 117..118,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ops: [
                                            In,
                                        ],
                                        comparators: [
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 122..123,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 125..126,
                                        id: Name("z"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 131..135,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 137..140,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 137..140,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 141..169,
                    is_async: false,
                    target: Set(
                        ExprSet {
                            node_index: NodeIndex(None),
                            range: 145..156,
                            elts: [
                                Compare(
                                    ExprCompare {
                                        node_index: NodeIndex(None),
                                        range: 146..152,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 146..147,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ops: [
                                            In,
                                        ],
                                        comparators: [
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 151..152,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 154..155,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 160..164,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 166..169,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 166..169,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for d(x in y) in target: ...
  |     ^^^^^^^^^ Syntax Error: Invalid assignment target
2 | for (x in y)() in iter: ...
3 | for (x in y) in iter: ...
  |


  |
1 | for d(x in y) in target: ...
2 | for (x in y)() in iter: ...
  |     ^^^^^^^^^^ Syntax Error: Invalid assignment target
3 | for (x in y) in iter: ...
4 | for (x in y, z) in iter: ...
  |


  |
1 | for d(x in y) in target: ...
2 | for (x in y)() in iter: ...
3 | for (x in y) in iter: ...
  |      ^^^^^^ Syntax Error: Invalid assignment target
4 | for (x in y, z) in iter: ...
5 | for [x in y, z] in iter: ...
  |


  |
2 | for (x in y)() in iter: ...
3 | for (x in y) in iter: ...
4 | for (x in y, z) in iter: ...
  |      ^^^^^^ Syntax Error: Invalid assignment target
5 | for [x in y, z] in iter: ...
6 | for {x in y, z} in iter: ...
  |


  |
3 | for (x in y) in iter: ...
4 | for (x in y, z) in iter: ...
5 | for [x in y, z] in iter: ...
  |      ^^^^^^ Syntax Error: Invalid assignment target
6 | for {x in y, z} in iter: ...
  |


  |
4 | for (x in y, z) in iter: ...
5 | for [x in y, z] in iter: ...
6 | for {x in y, z} in iter: ...
  |     ^^^^^^^^^^^ Syntax Error: Invalid assignment target
  |
